3.0.dev (xx/xx/xxxx)
--------------------

Development version.

2.5 (02/03/2018)
----------------

- Numpy is now installed with ``setup_requires``, which means that it is no
  more required to run the setup, and it can be installed directly as
  a dependency.

- Allow to pickle MPDAF objects (``Cube``, ``Image``, ``Spectrum``,
  ``Source``). This makes it much easier to use these MPDAF objects with
  ``multiprocessing`` as they can now be passed transparently to the
  subprocesses.

- Allow to specify the wavelength range in ``Cube.subcube_circle_aperture``.

- Speedup ``create_psf_cube``, ``moffat_image`` and ``gauss_image``.

- Add option to plot images with world coordinates axes, using
  ``astropy.visualization.wcsaxes``. This can be used with
  ``Image.plot(..., use_wcs=True)``

Sources
~~~~~~~

- Better completions for Source attributes, and for keys in IPython.

- Allow to load a "fieldmap" from a dedicated file (in ``Source.add_FSF``).

- New method to get FSF keywords from a Source (``Source.get_FSF``).

Catalog
~~~~~~~

- Remove the index that was added by default on the 'ID' column, as it was
  causing errors with some operations due to bugs in the Astropy
  implementations. Indexes can still be added manually if needed.

- Allow to pass additional Ellipse arguments to ``Catalog.plot_symb``.

- Allow to export coordinates from their columns to
  a ``astropy.coordinates.SkyCoord`` object (``Catalog.to_skycoord``) and to
  ds9 region file (``Catalog.to_ds9_regions``).

- New methods ``Catalog.nearest``, to get the nearest sources with respect to
  a given coordinate, and ``Catalog.match3Dline``, to match elements of the
  current catalog with an other using spatial (RA, DEC) and a list of spectral
  lines location.

- ``Catalog.plot_id`` is deprecated, in favor of ``Catalog.plot_symb`` with
  ``label=True``.

- Allow to use a mask in ``Catalog.select``.

- Add workaround for reading FITS table written with ``Catalog``, with Astropy